--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcc 'AP'
 - !lcsh 'England -- Periodicals'
 - !lcsh 'Scotland -- Periodicals'
+- GITenberg
 title: Blackwood's Edinburgh Magazine, Vol. 66 No.406, August 1849
 url: http://www.gutenberg.org/ebooks/43722
